Start a glossary Current state: A proof of concept. - Added a link on the home page to the glossary. - Added 1 glossary entry. - Added blank .css templates, in case we want to change the style of the glossary later.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: default
   This website hosts the tunes commonly played by the society, it is always vaguely in development. You can help by testing the site, contributing tunes and reporting any bugs you find, if you want to! 
 </p>
 <p><a href="tunes.html">View the tunebook</a></p>
+<p><a href="glossary.html">View a glossary of folk tune terms.</a>
 <p>
   For more information on our society please visit our website at <a href="https://bristolfolksoc.com/" target="_blank">bristolfolksoc.com <i class="fas fa-external-link-alt"></i></a>. If you would like to find out the details of what we do, take part in our activities or book us for your event then get in touch with us…
 </p>
